例外の修正1